# PatentNotebook

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: auth_providers.py  config.py  rbac.py  security.py
backend/app/db/: init_db.py
backend/tests/: test_epo_adapter.py  test_health.py  test_ingest_helpers.py
docs/: architecture.md  evaluation.md  midterm-defense-summary.md  openapi.yaml  prd.md
ep_ingest/: README.md  pyproject.toml
ep_ingest/src/ep_ingest/: __init__.py  __main__.py  browser_bypass.py  cli.py  errors.py  http_client.py  identifiers.py  logging_utils.py  metrics.py  models.py  ops_client.py  ops_exam_files.py  service.py  storage.py
ep_ingest/src/ep_ingest/processing/: __init__.py  classify.py  comparison_candidates.py  extract.py  timeline.py
ep_ingest/src/ep_ingest/scraper/: __init__.py  register.py
ep_ingest/tests/: test_blocked_detection.py  test_browser_fallback.py  test_classifier.py  test_http_cache.py  test_identifiers.py  test_integration_pipeline.py  test_ops_exam_files.py  test_register_doclist_links.py  test_timeline.py  test_zip_archive_download.py
ep_ingest/tests/fixtures/: register_all_documents.html  register_case_page.html
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  SourcesPanel.tsx  StudioPanel.tsx
frontend/lib/: api.ts  workspace.ts
scripts/: filter_comparison_candidates.py
(+41 files in other folders)
