[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ep-ingest"
version = "0.1.0"
description = "EP-only patent prosecution ingestion service (Module 1 + Module 2)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "httpx>=0.27.0",
  "lxml>=5.2.0",
  "pydantic>=2.8.0",
  "rich>=13.7.0",
  "tenacity>=9.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
pdf = [
  "PyMuPDF>=1.24.0",
]
browser = [
  "playwright>=1.50.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
ep_ingest = "ep_ingest.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
